--- a/_config.yml
+++ b/_config.yml
@@ -14,9 +14,9 @@ timezone:
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: Chirpy # the main title
+title: Gabriel Agboruche # the main title
 
-tagline: A text-focused Jekyll theme # it will display as the sub-title
+tagline: OT Cybersecurity Leader # it will display as the sub-title
 
 description: >- # used by seo meta and the atom feed
   A minimal, responsive and feature-rich Jekyll theme for technical writing.
@@ -73,7 +73,7 @@ theme_mode: # [light|dark]
 img_cdn:
 
 # the avatar on sidebar, support local or CORS resources
-avatar:
+avatar: https://pbs.twimg.com/profile_images/1743499752283484161/ZGsdnMTF_400x400.jpg
 
 # boolean type, the global switch for TOC in posts.
 toc: true
