--- a/_config.yml
+++ b/_config.yml
@@ -26,23 +26,24 @@ description: >- # used by seo meta and the atom feed
 url: "https://icsgabe.github.io"
 
 github:
-  username: github_username # change to your github username
+  username: https://github.com/ICSGabe # change to your github username
 
 twitter:
-  username: twitter_username # change to your twitter username
+  username: https://twitter.com/ICS_Gabe # change to your twitter username
 
 social:
   # Change to your full name.
   # It will be displayed as the default author of the posts and the copyright owner in the Footer
-  name: your_full_name
-  email: example@domain.com # change to your email address
+  name: Gabriel Agboruche
+  email: strugglesec@gmail.com # change to your email address
   links:
     # The first element serves as the copyright owner's link
+     - https://www.linkedin.com/in/gabrielagboruche
     - https://twitter.com/username # change to your twitter homepage
     - https://github.com/username # change to your github homepage
     # Uncomment below to add more social links
     # - https://www.facebook.com/username
-    # - https://www.linkedin.com/in/username
+   
 
 google_site_verification: # fill in to your verification string
 
