pull back issues

--- a/_config.yml
+++ b/_config.yml
@@ -26,24 +26,23 @@ description: >- # used by seo meta and the atom feed
 url: "https://icsgabe.github.io"
 
 github:
-  username: https://github.com/ICSGabe # change to your github username
+  username: github_username # change to your github username
 
 twitter:
-  username: https://twitter.com/ICS_Gabe # change to your twitter username
+  username: twitter_username # change to your twitter username
 
 social:
   # Change to your full name.
   # It will be displayed as the default author of the posts and the copyright owner in the Footer
-  name: Gabriel Agboruche
-  email: strugglesec@gmail.com # change to your email address
+  name: your_full_name
+  email: example@domain.com # change to your email address
   links:
     # The first element serves as the copyright owner's link
-     - https://www.linkedin.com/in/gabrielagboruche
     - https://twitter.com/username # change to your twitter homepage
     - https://github.com/username # change to your github homepage
     # Uncomment below to add more social links
     # - https://www.facebook.com/username
-   
+    # - https://www.linkedin.com/in/username
 
 google_site_verification: # fill in to your verification string
 
@@ -74,7 +73,7 @@ theme_mode: # [light|dark]
 img_cdn:
 
 # the avatar on sidebar, support local or CORS resources
-avatar: https://pbs.twimg.com/profile_images/1743499752283484161/ZGsdnMTF_400x400.jpg
+avatar:
 
 # boolean type, the global switch for TOC in posts.
 toc: true
