--- a/_config.yml
+++ b/_config.yml
@@ -73,7 +73,7 @@ theme_mode: # [light|dark]
 img_cdn:
 
 # the avatar on sidebar, support local or CORS resources
-avatar: https://pbs.twimg.com/profile_images/1743499752283484161/ZGsdnMTF_400x400.jpg 
+avatar: https://media.licdn.com/dms/image/D5603AQFp1COl9_F6mA/profile-displayphoto-shrink_400_400/0/1687990096421?e=1718236800&v=beta&t=WjlGaiGqP8kbweiZqSvt4JeKIbyL7ezS4jAVh6vsCdw 
 
 # boolean type, the global switch for TOC in posts.
 toc: true
